# rabbithole

./: .env  .env.example  .gitignore  ACTIVITY_FEED_IMPLEMENTATION.md  ACTIVITY_SYSTEM_DELIVERABLES.md  AI_ARCHITECTURE_DIAGRAM.md  AI_FEATURES.md  AI_GUIDED_INQUIRY_SYSTEM.md  ARCHITECTURE_DIAGRAM.md  CLAUDE.md  CLEANUP_SUMMARY.md  CODE_REVIEW_PRODUCTION_READINESS.md  CODE_REVIEW_SUMMARY.txt  COMMENTS_API_REFERENCE.md  CONTRIBUTING.md  DATABASE_FIX_REPORT.md  DELIVERY_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DESIGN_PROPOSAL_SUMMARY.md  DESIGN_SYSTEM.md  E2E_TEST_IMPROVEMENTS.md  FINAL_IMPLEMENTATION_COMPLETE.md  FRONTEND_IMPLEMENTATION_COMPLETE.md  GAPS_QUICK_REFERENCE.md  GEMINI.md  GOOGLE_OAUTH_SETUP.md  GRAPHRAG_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_GAP_ANALYSIS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_STATUS.md  INTEGRATION_SUMMARY.md  LAYOUT_SYSTEM_IMPLEMENTATION.md  MEDIA_PROCESSING_FILES.txt  MEDIA_PROCESSING_SUMMARY.md  (+65 more)
backend/src/: Cargo.toml  db.rs  index.ts  lib.rs  main.rs  tests.rs
backend/src/__tests__/: AIAssistantService.test.ts  AIEvaluationService.test.ts  AudioProcessingService.test.ts  AudioTranscriptionService.test.ts  ConversationalAIService.test.ts  CredibilityCalculationService.test.ts  DeduplicationService.test.ts  EmbeddingService.test.ts  FactCheckingService.test.ts  FileStorageService.test.ts  FormalInquiryResolver.test.ts  FormalInquiryService.test.ts  GraphResolver.test.ts  README.md  (+11 more)
(+1068 files in other folders)
