[package]
name = "rabbithole_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rabbithole_backend"
path = "src/lib.rs"

[dependencies]
neo4j = "0.0.1-alpha.2"

[dev-dependencies]
testcontainers = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
